tests/snapshots/examples_fixtures/errors__wrong_arguments.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/wrong_arguments.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `substring`.

  examples/errors/wrong_arguments.flx:7:14
  |
7 | let result = substring("hello", 0)
  |              ^^^^^^^^^

Hint:
  Define it first: let substring = ...;


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/errors/wrong_arguments.flx:8:1
  |
8 | print(result)
  | ^^^^^^^^^^^^^
  | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/errors/wrong_arguments.flx:8:1
  |
8 | print(result)
  | ^^^^^^^^^^^^^
  | ------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
